# cvw22-operations-officer

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  Dockerfile  README.md  README.rst  compose.yaml  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_publish_image.yaml  ci-cd.yaml  python-cd.yml  python-ci.yml
bot/: Dockerfile  data.json  main.py
docs/: .readthedocs.yaml  conf.py  index.rst
docs/source/: conf.py  configuration.rst  index.rst
src/bot/: main.py
src/bot/data/: brevityTerms.csv  data.json
src/cvw22_operations_officer/: __main__.py  bot.py
src/cvw22_operations_officer/cogs/: __init__.py  admin.py  brevity_term.py  brevity_term_cog.py  config_cog.py
src/cvw22_operations_officer/config/: config.yaml
src/cvw22_operations_officer/config_templates/: config.yaml
src/cvw22_operations_officer/config_templates/database/: brevity_term.sql
src/cvw22_operations_officer/models/: brevity_term_model.py
src/cvw22_operations_officer/services/: brevity_term_service.py
src/cvw22_operations_officer/utils/: database.py
tests/: test_bot.py  test_brevity_term_cog.py  test_brevity_term_service.py  test_config_cog.py  test_database.py  test_foo.py  test_main.py
tests/template/: brevity_term_test.sql  config.yaml  schema.sql
tools/: setup.sh  update.sh
