[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "cvw22-operations-officer"
dynamic = ["version"]
description = "A Discord bot for the vCVW22 Discord server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["discord", "docker"]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pydoclint]
style = "google"
allow-init-docstring = true
arg-type-hints-in-docstring = false
check-return-types = false

[tool.pytest]
testpaths = ["tests"]
filterwarnings = [
    "ignore:'audioop' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pydoclint>=0.8.3",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.6",
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]
